Flan 1.2.5
======================
- Fix inventory desync after closing gui
- Sync itemstack when failing to place blocks
- Fix various thrown entitys to not abide by claim protection

Flan 1.2.4
======================
- Fix crash in void worlds #39
- Fix permission autocomplete #43
- Fix mod icon #42
- Check if the new owner has enough claim blocks when using transferClaim. Bypassed with admin mode

Flan 1.2.3
======================
- Fabric Permission API support for commands and claim creation. See wiki for permission nodes
- Add an ignore list for blocks to be ignored (For mods with gravestones etc.)
- Add a permission check event for mods
- Fix piercing arrows locking up the game in claims

Flan 1.2.2
======================
- Increase particle size #25
- Fix thrown items activating pressure plates #30
- Add option to have multiple lines for permission description in lang file #24
- Add enderchest, enchantment table use, piston and water across border permission #29
- Fix player claim data being reset upon death #26

Flan 1.2.1
======================
- Fix wrong claim size calculation #19
- Fix blacklisted worlds not saving #21
- Fix group command not able to edit some groups with illegal characters #20
- Fix double message for claim inspection when targeting a block
- Add toggable mobspawning for claims. Needs allowMobSpawnToggle to be true in the config

Flan 1.2.0
======================
- Claim display stays as long as you are holding either the inspection or the claiming tool
- Fix things getting logged despite enableLogs set to false
- Change the default time to get a claim block to 600 ticks instead of 1200
- Change Permission to a registry instead of hardcoded enums

Flan 1.1.5
======================
- Make tile entitys always at least be in the open container flag.
  Making them always be protected. This can be turned off to only include inventory type tile entities.
  #14

Flan 1.1.4
======================